--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             cartonContainer.style.display = 'none';  // Ocultar el contenedor del cartón por defecto
 
             try {
-                const response = await fetch('https://bingo-backend-2del.onrender.com', {
+                const response = await fetch('https://bingo-backend-2del.onrender.com/generar-carton', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
