--- a/index.html
+++ b/index.html
@@ -88,12 +88,13 @@
 
             try {
                 const response = await fetch('https://bingo-backend-2del.onrender.com/generar-carton', {
-                    method: 'POST',
+                    method: 'POST',  // Asegúrate de que el método sea POST
                     headers: {
                         'Content-Type': 'application/json',
                     },
-                    body: JSON.stringify({ correo: correo }),
+                    body: JSON.stringify({ correo: correo }),  // Envía el correo en el cuerpo de la solicitud
                 });
+
 
                 if (response.ok) {
                     const blob = await response.blob();
